# experiments

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tox.ini
.github/workflows/: _release.yaml  _tests.yaml  publish.yaml  pull_request.yaml  push.yaml  push_main.yaml  tests.yaml
.github/workflows/reusables/: tests.yaml
actions.bckp/: _release.yaml  pull_request.yaml
requirements/: dev.in  dev.txt  docs.txt  tests.txt  typing.txt
src/workfloz/: file.py
tests/: test_file.py  test_one.py  utils.py
